<resources>
  <string name="nombre_aplicacion">Mi Aplicación Android</string>
  <string name="boton_pulse">"¡Pulse!"</string>
  <string name="carga">"Cargando..."</string>
  <string name="actividad_destino_mensaje">"Esta es la actividad destino. Pulse Volver para ir a la actividad que invoca (=actividad anterior)."</string>
  <string name="ej01_mensaje_apaisado">"Esta es una cadena de caracteres definida en el archivo res/values/strings.xml (etiqueta string cuyo atributo name tiene como valor \"ej01_mensaje_apaisado\").\nEl layout utilizado es el definido para el modo apaisado. Gire la pantalla para mostrar el layout correspondiente al modo vertical."</string>
  <string name="ej01_mensaje_vertical">"Esta es una cadena de caracteres definida en el archivo res/values/strings.xml (etiqueta string cuyo atributo name tiene como valor \"ej01_mensaje_vertical\").\nEl layout utilizado es el definido para el modo vertical. Gire la pantalla para mostrar el layout correspondiente al modo apaisado."</string>
  <string name="ej01_mensaje_textview_drawable">"Ceci est un mensaje d'exemple\ncomprenant 4 images."</string>
  <string name="ej01_mensaje_no_mostrado">"Éste es un mensaje que no se muestra jamás porque se remplaza en el código java por el siguiente mensaje antes de mostrarse."</string>
  <string name="ej01_nuevo_mensaje">"Éste es un mensaje de ejemplo\nque contiene cuatro líneas\naunque sólo son visibles las tres primeras.\nComo prueba, verá que no puede leer esta línea."</string>
  <string name="ej01_edit">"Escriba si texto aquí"</string>
  <string name="ej01_boton_pulsar">"¡De lleno!"</string>
  <string name="ej02_intencion_explicita">"Pulse el siguiente botón para ejecutar la actividad de destino utilizando un Intent explícita."</string>
  <string name="ej02_intencion_implicita">"Pulse uno de los siguientes botones para abrir una actividad de destino que responda a la acción correspondiente."</string>
  <string name="ej02_boton_view">"ACTION_VIEW"</string>
  <string name="ej02_boton_action1">"ACTION1"</string>
  <string name="ej02_vertical">"Esta actividad se muestra únicamente en modo vertical y no responde a los movimientos de rotación de la pantalla.\nSe muestra, además, en pantalla completa. Toda esta información se indica en el archivo AndroidManifest.xml."</string>
  <string name="ej02_vertical_inversa">"Esta actividad se muestra únicamente en modo vertical inverso y no responde a los movimientos de rotación de la pantalla.\nSe muestra, además, en pantalla completa. Toda esta información se indica en el archivo AndroidManifest.xml."</string>
  <string name="ej02_ciclodevida">"Esta actividad muestra los distintos estados de su ciclo de vida. Pulse las teclas del dispositivo para provocar cambios de estado de la actividad."</string>
  <string name="ej02_resultado">"Pulse el botón para ejecutar la actividad de destino que devolverá un código resultado cuando salga."</string>
  <string name="ej02_resultado_ok">"Resultado: %1$s / %2$s=%3$s / %4$s=%5$s"</string>
  <string name="ej02_resultado_ko">"Resultado: %1$s"</string>
  <string name="ej02_resultado_dest">"Pulse el botón para devolver el código RESULT_OK con datos o pulse la tecla Volver para devolver el código RESULT_CANCEL."</string>
  <string name="ej02_restauracion">"Cambie la orientación de la pantalla varias veces para cambiar el color de la vista. Repita la operación habiendo marcado la siguiente opción."</string>
  <string name="ej02_restauracion_salvaguardar">"Salvaguardar y restaurar el color actual."</string>
  <string name="ej02_pila">"Pulse los botones 'Apilar A' o 'Apilar B' A o B y apilarla en la pila de actividades.\nPulse los botones 'Desapilar hasta A' o 'Desapilar hasta B' para desapilar todas las actividades hasta la actividad A o B más reciente en la pila.\nPulse el botón 'Desapilar todo' para volver a la actividad de inicio desapilando todas las actividades apiladas previamente.\nPulse la tecla Volver para volver a la actividad anterior (y desapilar la actividad en curso)."</string>
  <string name="ej02_pila_init">"Pila: "</string>
  <string name="ej02_boton_apilar_a">"Apilar A"</string>
  <string name="ej02_boton_apilar_b">"Apilar B"</string>
  <string name="ej02_boton_desapilar_hasta_a">"Desapilar hasta A"</string>
  <string name="ej02_boton_desapilar_hasta_b">"Desapilar hasta B"</string>
  <string name="ej02_boton_desapilar_todo">"Desapilar todo"</string>
  <string name="ej03_styles_texto_titulo">"texto.Titulo"</string>
  <string name="ej03_styles_texto_base">"texto.Base"</string>
  <string name="ej03_styles_texto_wrap">"texto.Wrap"</string>
  <string name="ej03_styles_texto_boldwrap">"texto.BoldWrap"</string>
  <string name="ej03_styles_boton_normal">"boton.Normal"</string>
  <string name="ej03_menu">"Pulse en la tecla Menú para mostrar las distintas opciones del menú y seleccionar una."</string>
  <string name="ej03_menu_contextual">"Una pulsación prolongada sobre la pantalla abre el menú contextual vinculado con el layout principal."</string>
  <string name="ej03_menu_opcion1">"Opcion1"</string>
  <string name="ej03_menu_opcion2">"Opcion2"</string>
  <string name="ej03_menu_opcion2.1">"Opcion2.1"</string>
  <string name="ej03_menu_opcion2.2">"Opcion2.2"</string>
  <string name="ej03_menu_opcion3">"Opcion3"</string>
  <string name="ej03_menu_opcion4">"Opcion4"</string>
  <string name="ej03_menu_opcion4.1">"Opcion4.1"</string>
  <string name="ej03_menu_opcion4.2">"Opcion4.2"</string>
  <string name="ej03_menu_opcion5">"Opcion5"</string>
  <string name="ej03_menu_opcion6">"Opcion6"</string>
  <string name="ej03_menu_seleccion">"¡Menú %s seleccionado!"</string>
  <string name="ej03_menu_seleccion_opcion1">"Se ha seleccionado Opcion1"</string>
  <string name="ej03_dialogo_seleccion1">"Selección 1"</string>
  <string name="ej03_dialogo_seleccion2">"Selección 2"</string>
  <string name="ej03_dialogo_seleccion3">"Selección 3"</string>
  <string name="ej03_dialogo_alerta">"Cuadro de diálogo de alerta"</string>
  <string name="ej03_dialogo_alerta_msg">"Mensaje del cuadro de diálogo"</string>
  <string name="ej03_dialogo_alerta_seleccion">"Cuadro de diálogo de alerta con selección"</string>
  <string name="ej03_dialogo_progresion">"Cuadro de diálogo de progresión"</string>
  <string name="ej03_dialogo_progresion_ind">"Cuadro de diálogo de progresión ind"</string>
  <string name="ej03_notificacion_boton">"Agregar una notificación"</string>
  <string name="ej03_notificacion_titulo">"Título de la notificaciónn"</string>
  <string name="ej03_notificacion_ticker">"Mensaje de la notificaciónn"</string>
  <string name="ej03_notificacion_texto">"Un clic aquí abre la actividad."</string>
  <string name="ej03_notificacion_agregado">"Notificación agregada"</string>
  <string name="ej03_notification_error">"Error tras la creación de la notificación"</string>
  <string name="ej03_toast_duracion_corta">"Toast de duración corta"</string>
  <string name="ej03_toast_duracion_larga">"Toast de duración larga"</string>
  <string name="ej04_service_infos">"Pulse el botón 'startService' una o varias veces para iniciar el servicio (o enviarle un nuevo intent si ya está iniciado).\nPulse el botón 'stopService' para detener el servicio.\nPulse el botón 'stopSelf' para pedirle al servicio que se detenga él mismo  (no tiene sentido más que para nuestro ejemplo).\nUna vez lanzado el servicio, puede salir de la aplicación. El servicio seguirá activo. A continuación, vuelva aquí para detenerlo..."</string>
  <string name="ej04_service_boton_start">"startService"</string>
  <string name="ej04_service_boton_stop">"stopService"</string>
  <string name="ej04_service_boton_stopself">"stopSelf"</string>
  <string name="ej04_service_boton_bind">"Bind"</string>
  <string name="ej04_service_boton_unbind">"Unbind"</string>
  <string name="ej04_service_boton_action">"Action"</string>
  <string name="ej04_receptor_evts">"Pulse el botón para enviar un evento que se recibirá y procesará en el receptor de eventos."</string>
  <string name="ej04_receptor_evts_envio_evt">"Envío de un evento"</string>
  <string name="ej04_receptor_evts_recepcion_evt">"onReceive: Evento recibido."</string>
  <string name="ej04_notificacion_titulo">"Notificación del funcionamiento del servicio"</string>
  <string name="ej04_notificacion_ticker">"Mensaje de la notification"</string>
  <string name="ej04_notificacion_texto">"No puede eliminarlo el usuario."</string>
  <string name="ej05_prefs">"Edite los siguientes campos, guárdelos o no, salga de la aplicación y, a continuación, vuelva a iniciarla para restaurar los valores de la última salvaguarda."</string>
  <string name="ej05_prefs_seleccion">"Selección"</string>
  <string name="ej05_prefs_opcion_a">"Opción A"</string>
  <string name="ej05_prefs_opcion_b">"Opción B"</string>
  <string name="ej05_prefs_boton_salvaguardar">"Salvaguardar"</string>
  <string name="ej05_archivos">"Esta actividad salvaguarda el logo de la aplicación en un archivo en el área de almacenamiento interno.\nA continuación, lee el archivo para recuperar los datos de la imagen que debe mostrarse a continuación."</string>
  <string name="ej05_archivos_rutas">"getFilesDir='%1$s'\ngetCacheDir='%2$s'\nEstado del soporte externo:'%3$s'\ngetextornalCacheDir='%4$s'\ngetextornalFilesDir(null)='%5$s'\ngetextornalFilesDir(Environment.DIRECTORY_PICTURES)='%6$s'\ngetextornalStoragePublicDirectory(Environment.DIRECTORY_PICTURES)='%7$s'"</string>
  <string name="ej05_bdd">"Esta actividad crea (la primera vez) una base de datos SQLite, agrega datos, los recupera y, a continuación, los muestra."</string>
  <string name="ej05_proveedor_de_contenidos">"Esta actividad muestra 10 imágenes provistas por el proveedor de contenidos almacenadas en el soporte externo."</string>
  <string name="ej05_proveedor_de_contenidos_sin_imagenes">"¡No se ha encontrado ninguna imagen!"</string>
  <string name="ej06_escriba_una_cifra_en_letras">"Escriba una cifra en letras"</string>
  <string name="hola_android">¡Hola Android!</string>
  <string name="android_guia_de_desarrollo">Android, Guía de desarrollo</string>
  <string name="ej06_abierto">Abierto</string>
  <string name="ej06_cerrado">Cerrado</string>
  <string name="ej06_quienes_somos">¿Quiénes somos?</string>
  <string name="ej06_inicio">Inicio</string>
  <string name="ej06_menu">Menú</string>
  <string name="ej06_contenido">Contenido</string>
  <string name="ej06_navegacion">Navegación</string>
  <string name="ej07_proceso">"Escriba el comando 'adb shell ps' en una consola (o utilice la perspectiva DDMS en Eclipse) para ver la lista de procesos.\nAparece el proceso en curso 'es.midominio.android.miaplicacion'. A continuación, haga clic en el siguiente botón."</string>
  <string name="ej07_otro_proceso">"Escriba de nuevo el comando 'adb shell ps' en una consola (o utilice la perspectiva DDMS en Eclipse) para ver la lista de procesos.\nSe ha creado un nuevo proceso 'es.midominio.android.miaplicacion:otroProceso' que contiene la actividad en curso."</string>
  <string name="ej07_anr">"(ANR por Application Not Responding).\nHaciendo clic en el botón se bloquea la apicación. Pulse, a continuación, en Volver. Algunos segundos más tarde, aparece un mensaje que permite forzar el cierre de la aplicación o esperar que responda..."</string>
  <string name="ej07_asynctask">"Esta actividad busca los números primos en una tarea secundaria para no bloquear el thread principal."</string>
  <string name="ej07_calculo_iniciado">"¡Cálculo de número primos iniciado!"</string>
  <string name="ej11_geoloc_info">"Haga clic en el siguiente botón para obtener los datos de localización. Habilite/Deshabilite las opciones de localización a través de redes en la configuración de su dispositivo."</string>
  <string name="ej11_geoloc_cache">"Caché"</string>
  <string name="ej11_geoloc_actualiz_regular_on">"¡Detener las actualizaciones!"</string>
  <string name="ej11_geoloc_actualiz_regular_off">"Actualizaciones regulares"</string>
</resources>