<?xml version="1.0" encoding="utf-8"?>
<menu
  xmlns:android="http://schemas.android.com/apk/res/android">
  <item
    android:id="@+id/menu_contextual_opcion1"
    android:title="@string/ej03_menu_opcion1" />
  <item
    android:id="@+id/menu_contextual_opcion2"
    android:title="@string/ej03_menu_opcion2" />
  <group
    android:checkableBehavior="single">
    <item
      android:id="@+id/menu_contextual_opcion3"
      android:title="@string/ej03_menu_opcion3"
      android:checked="true" />
    <item
      android:id="@+id/menu_contextual_opcion4"
      android:title="@string/ej03_menu_opcion4" />
  </group>
  <group
    android:checkableBehavior="all">
    <item
      android:id="@+id/menu_contextual_opcion5"
      android:title="@string/ej03_menu_opcion5"
      android:checked="true" />
    <item
      android:id="@+id/menu_contextual_opcion6"
      android:title="@string/ej03_menu_opcion6" />
  </group>
</menu>
